Fix the visibility of dropdown menu

--- a/app/assets/stylesheets/patterns/_nav_home.scss
+++ b/app/assets/stylesheets/patterns/_nav_home.scss
@@ -22,8 +22,9 @@ i.icon-normal {
   width: 170px;
   background-color: white;
   border: 1px solid $btn-border-grey;
-  right: 20.5%;
+  right: 20%;
   top: 43px;
+  z-index: 1;
 }
 
 .nav-section-right {
